# toru-steering-center

./: .gitignore  Cargo.toml  README.md  build-and-run.sh  code-review-plugin-system.md  execution-plan-plugin-system.md  plugin-system-diff.txt  validation-plan-plugin-system.md
.cursor/plans/: steering_center_starter_ac49c00c.plan.md
.megg/: decisions.md  info.md  map.md
docs/: auth_system.md  idea.md
docs/plugins/: ARCHITECTURE.md  PROTOCOL.md  README.md
examples/hello-plugin-python/: build.sh
examples/hello-plugin-rust/: Cargo.toml  build.sh
examples/hello-plugin-rust/frontend/: bundle.js
examples/hello-plugin-rust/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/.megg/: info.md
frontend/src/: App.tsx  index.css
frontend/src/components/: ChangePassword.tsx  Layout.tsx  LoginHistory.tsx  ProtectedRoute.tsx  ToruLogo.tsx  UserManagement.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useSystemStats.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  History.tsx  Login.tsx  PluginView.tsx  Plugins.tsx  Scripts.tsx  Settings.tsx  SystemMonitor.tsx
openspec/: project.md
openspec/changes/add-dynamic-plugin-system/: design.md  proposal.md  tasks.md
openspec/changes/add-plugin-licensing/: design.md  proposal.md  tasks.md
openspec/ideas/: idea-1767879075404.md  idea-1767879170979.md
openspec/specs/auth/: spec.md
openspec/specs/execution/: spec.md
openspec/specs/quick-actions/: spec.md
openspec/specs/settings/: spec.md
plugins/: hello-plugin-python.binary  hello-plugin-rust.binary
plugins/.metadata/: config.json
plugins/hello-plugin-python/: bundle.js
scripts/: disk-usage.sh  system-info.sh  update-check.sh
src/: db.rs  main.rs
src/.megg/: decisions.md  info.md
src/routes/: api.rs  auth.rs  mod.rs  plugins.rs  ws.rs
src/services/: auth.rs  executor.rs  kv_store.rs  logging.rs  mod.rs  plugins.rs  plugins.rs.bak  plugins.rs.bak3  plugins.rs.bak4  plugins.rs.bak5  system.rs
tests/: plugins_integration.rs
toru-plugin-api/src/: protocol.rs
(+21 files in other folders)
