[workspace]
members = [".", "toru-plugin-api"]

[package]
name = "steering-center"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.30"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
futures = "0.3"
chrono = "0.4"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
argon2 = "0.5"
rand = "0.8"
time = "0.3"
subtle = "2.6.1"
dotenv = "0.15"
toru-plugin-api = { path = "toru-plugin-api" }
async-trait = "0.1"
libc = "0.2"

[dev-dependencies]
chrono = "0.4"
tempfile = "3.10"


