[workspace]

[package]
name = "hello-plugin-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
toru-plugin-api = { path = "../../toru-plugin-api" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
